Home page Mobile Responsive UI

--- a/reactApp/src/index.html
+++ b/reactApp/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <base href="/" />
     <title>Dream Makers</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap css -->
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
