--- a/reactApp/src/index.html
+++ b/reactApp/src/index.html
@@ -6,6 +6,7 @@
     <base href="/" />
     <title>Dream Makers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="/public/favicon.ico">
     <!-- bootstrap css -->
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
