--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="http://54.179.136.234/fonts/28 Days Later/28 Days Later.ttf" rel="stylesheet" />
+    <!-- <link href="http://54.179.136.234/fonts/28 Days Later/28 Days Later.ttf" rel="stylesheet" /> -->
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
 </head>
